--- a/src/pycreator/templates/version.j2
+++ b/src/pycreator/templates/version.j2
@@ -9,4 +9,4 @@ class ShowVersion(Action):
         pass
 
     def process_action(self, configuration):
-        print("pycreator: v0.1")
+        print("{{ creator_app_name }}: v0.1")
